added css style file

--- a/index.html
+++ b/index.html
@@ -4,55 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "styles/a1_styles.css">   
 </head>
 <body>
-    <h1>Assignment #1 Student Plans</h1>
-    <div>
-        <h2>Budget Student</h2>
-        <p><strong>$10</strong>/mo</p>
-        <ul>
-            <li><strong>512MB</strong> Student Memory</li>
-            <li><strong>1TB</strong> Patience</li>
-            <li><strong>20GB</strong> Exam Recall</li>
-            <li><strong>0</strong> Quiz A Grades</li>
-            <li>
-                <button type = "button">
-                    <strong>View Form</strong>
-                </button>
-            </li>
-        </ul>
-    </div>
 
-    <div>
-        <h2>Standard Student</h2>
-        <p><strong>$25</strong>/mo</p>
-        <ul>
-            <li><strong>16GB</strong> Student Memory</li>
-            <li><strong>2TB</strong> Patience</li>
-            <li><strong>40GB</strong> Exam Recall</li>
-            <li><strong>2</strong> Quiz A Grades</li>
-            <li>
-                <button type = "button">
-                    <strong>View Form</strong>
-                </button>
-            </li>
-        </ul>
-    </div>
+    <div id = "main_section">
+        <h1>Assignment #1 Student Plans</h1>
+        <div id = "budget_student">
+            <h2>Budget Student</h2>
+            <p><strong>$10</strong>/mo</p>
+            <ul>
+                <li><strong>512MB</strong> Student Memory</li>
+                <li><strong>1TB</strong> Patience</li>
+                <li><strong>20GB</strong> Exam Recall</li>
+                <li><strong>0</strong> Quiz A Grades</li>
+                <li>
+                    <button type = "button">
+                        <strong>View Form</strong>
+                    </button>
+                </li>
+            </ul>
+        </div>
 
-    <div>
-        <h2>Scholarship Student</h2>
-        <p><strong>$50</strong>/mo</p>
-        <ul>
-            <li><strong>16GB</strong> Student Memory</li>
-            <li><strong>6TB</strong> Patience</li>
-            <li><strong>80GB</strong> Exam Recall</li>
-            <li><strong>3</strong> Quiz A Grades</li>
-            <li>
-                <button type = "button">
-                    <strong>View Form</strong>
-                </button>
-            </li>
-        </ul>
+        <div id="standard_student">
+            <h2>Standard Student</h2>
+            <p><strong>$25</strong>/mo</p>
+            <ul>
+                <li><strong>16GB</strong> Student Memory</li>
+                <li><strong>2TB</strong> Patience</li>
+                <li><strong>40GB</strong> Exam Recall</li>
+                <li><strong>2</strong> Quiz A Grades</li>
+                <li>
+                    <button type = "button">
+                        <strong>View Form</strong>
+                    </button>
+                </li>
+            </ul>
+        </div>
+
+        <div id="scholarship_student">
+            <h2>Scholarship Student</h2>
+            <p><strong>$50</strong>/mo</p>
+            <ul>
+                <li><strong>16GB</strong> Student Memory</li>
+                <li><strong>6TB</strong> Patience</li>
+                <li><strong>80GB</strong> Exam Recall</li>
+                <li><strong>3</strong> Quiz A Grades</li>
+                <li>
+                    <button type = "button">
+                        <strong>View Form</strong>
+                    </button>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div>
