made significant progress to index1

--- a/index.html
+++ b/index.html
@@ -8,58 +8,58 @@
 </head>
 <body>
 
-    <div id = "main_section">
+    <div id = "section_1">
         <h1>Assignment #1 Student Plans</h1>
-        <div id = "budget_student">
-            <h2>Budget Student</h2>
-            <p><strong>$10</strong>/mo</p>
-            <ul>
-                <li><strong>512MB</strong> Student Memory</li>
-                <li><strong>1TB</strong> Patience</li>
-                <li><strong>20GB</strong> Exam Recall</li>
-                <li><strong>0</strong> Quiz A Grades</li>
+        <div class = "div_student">
+            <h2 class = student>Budget Student</h2>
+            <p id = "bs_payment"><strong>$10</strong>/mo</p>
+            <ul class = "no_bullets">
+                <li><b>512MB</b> Student Memory</li>
+                <li><b>1TB</b> Patience</li>
+                <li><b>20GB</b> Exam Recall</li>
+                <li><b>0</b> Quiz A Grades</li>
                 <li>
                     <button type = "button">
-                        <strong>View Form</strong>
+                        <b>View Form</b>
                     </button>
                 </li>
             </ul>
         </div>
 
-        <div id="standard_student">
-            <h2>Standard Student</h2>
-            <p><strong>$25</strong>/mo</p>
-            <ul>
-                <li><strong>16GB</strong> Student Memory</li>
-                <li><strong>2TB</strong> Patience</li>
-                <li><strong>40GB</strong> Exam Recall</li>
-                <li><strong>2</strong> Quiz A Grades</li>
+        <div class = "div_student_mid">
+            <h2 class = student_mid>Standard Student</h2>
+            <p id = "ss_payment"><strong>$25</strong>/mo</p>
+            <ul class = "no_bullets">
+                <li><b>16GB</b> Student Memory</li>
+                <li><b>2TB</b> Patience</li>
+                <li><b>40GB</b> Exam Recall</li>
+                <li><b>2</b> Quiz A Grades</li>
                 <li>
                     <button type = "button">
-                        <strong>View Form</strong>
+                        <b>View Form</b>
                     </button>
                 </li>
             </ul>
         </div>
 
-        <div id="scholarship_student">
-            <h2>Scholarship Student</h2>
-            <p><strong>$50</strong>/mo</p>
-            <ul>
-                <li><strong>16GB</strong> Student Memory</li>
-                <li><strong>6TB</strong> Patience</li>
-                <li><strong>80GB</strong> Exam Recall</li>
-                <li><strong>3</strong> Quiz A Grades</li>
+        <div class = "div_student">
+            <h2 class = student>Scholarship Student</h2>
+            <p id = "sch_payment"><strong>$50</strong>/mo</p>
+            <ul class = "no_bullets">
+                <li><b>16GB</b> Student Memory</li>
+                <li><b>6TB</b> Patience</li>
+                <li><b>80GB</b> Exam Recall</li>
+                <li><b>3</b> Quiz A Grades</li>
                 <li>
                     <button type = "button">
-                        <strong>View Form</strong>
+                        <b>View Form</b>
                     </button>
                 </li>
             </ul>
         </div>
     </div>
 
-    <div>
+    <div id = "section_2">
         <h2>Learn in confidence</h2>
         <p>All our marking plans come with the same set of award-winning features</p>
         <ul>
