--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h2 class = student>Budget Student</h2>
             <p id = "bs_payment"><strong>$10</strong>/mo</p>
             <ul class = "no_bullets">
-                <li><b>512MB</b> Student Memory</li>
-                <li><b>1TB</b> Patience</li>
-                <li><b>20GB</b> Exam Recall</li>
-                <li><b>0</b> Quiz A Grades</li>
-                <li>
+                <li class = "sec1_list"><b>512MB</b> Student Memory</li>
+                <li class = "sec1_list"><b>1TB</b> Patience</li>
+                <li class = "sec1_list"><b>20GB</b> Exam Recall</li>
+                <li class = "sec1_list"><b>0</b> Quiz A Grades</li>
+                <li class = "sec1_list">
                     <button type = "button">
                         <b>View Form</b>
                     </button>
@@ -30,11 +30,11 @@
             <h2 class = student_mid>Standard Student</h2>
             <p id = "ss_payment"><strong>$25</strong>/mo</p>
             <ul class = "no_bullets">
-                <li><b>16GB</b> Student Memory</li>
-                <li><b>2TB</b> Patience</li>
-                <li><b>40GB</b> Exam Recall</li>
-                <li><b>2</b> Quiz A Grades</li>
-                <li>
+                <li class = "sec1_list"><b>16GB</b> Student Memory</li>
+                <li class = "sec1_list"><b>2TB</b> Patience</li>
+                <li class = "sec1_list"><b>40GB</b> Exam Recall</li>
+                <li class = "sec1_list"><b>2</b> Quiz A Grades</li>
+                <li class = "sec1_list">
                     <button type = "button">
                         <b>View Form</b>
                     </button>
@@ -46,11 +46,11 @@
             <h2 class = student>Scholarship Student</h2>
             <p id = "sch_payment"><strong>$50</strong>/mo</p>
             <ul class = "no_bullets">
-                <li><b>16GB</b> Student Memory</li>
-                <li><b>6TB</b> Patience</li>
-                <li><b>80GB</b> Exam Recall</li>
-                <li><b>3</b> Quiz A Grades</li>
-                <li>
+                <li class = "sec1_list"><b>16GB</b> Student Memory</li>
+                <li class = "sec1_list"><b>6TB</b> Patience</li>
+                <li class = "sec1_list"><b>80GB</b> Exam Recall</li>
+                <li class = "sec1_list"><b>3</b> Quiz A Grades</li>
+                <li class = "sec1_list">
                     <button type = "button">
                         <b>View Form</b>
                     </button>
@@ -60,12 +60,12 @@
     </div>
 
     <div id = "section_2">
-        <h2>Learn in confidence</h2>
+        <h1 class = "sec_2_h1">Learn in confidence</h1>
         <p>All our marking plans come with the same set of award-winning features</p>
-        <ul>
-            <li>Professor anti-grumpiness filter</li>
-            <li>Promise not to use ChatGPT</li>
-            <li>Complementary copy of <a href = "https://www.amazon.ca/Fundamentals-Web-Development-Randy-Connolly/dp/0134481267">Fundamentals of Web Development. 3rd Edition</a></li>
+        <ul class = "no_bullets">
+            <li class="sec2_list">Professor anti-grumpiness filter</li>
+            <li class="sec2_list">Promise not to use ChatGPT</li>
+            <li class="sec2_list">Complementary copy of <a href = "https://www.amazon.ca/Fundamentals-Web-Development-Randy-Connolly/dp/0134481267"><em>Fundamentals of Web Development. 3rd Edition</em></a></li>
         </ul>
 
 
