--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                 <li class = "sec1_list"><b>20GB</b> Exam Recall</li>
                 <li class = "sec1_list"><b>0</b> Quiz A Grades</li>
                 <li class = "sec1_list">
-                    <button type = "button">
-                        <b>View Form</b>
-                    </button>
+                    <a href="page2.html" class="button">View Form</a>
                 </li>
             </ul>
         </div>
@@ -35,9 +33,7 @@
                 <li class = "sec1_list"><b>40GB</b> Exam Recall</li>
                 <li class = "sec1_list"><b>2</b> Quiz A Grades</li>
                 <li class = "sec1_list">
-                    <button type = "button">
-                        <b>View Form</b>
-                    </button>
+                    <a href="page2.html" class="button">View Form</a>
                 </li>
             </ul>
         </div>
@@ -51,9 +47,7 @@
                 <li class = "sec1_list"><b>80GB</b> Exam Recall</li>
                 <li class = "sec1_list"><b>3</b> Quiz A Grades</li>
                 <li class = "sec1_list">
-                    <button type = "button">
-                        <b>View Form</b>
-                    </button>
+                    <a href="page2.html" class="button">View Form</a>
                 </li>
             </ul>
         </div>
