--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href = "styles/a1_styles.css">   
+    <link rel = "stylesheet" href = "styles/index_style.css">   
 </head>
 <body>
 
